--- a/paginas/login.html
+++ b/paginas/login.html
@@ -32,10 +32,11 @@
 <meta name="google-site-verification" content="6ystVr7sfpd20ctZGukFGunzOJQW7O6kJpXvzAxSEzI" />
 <meta name="google-site-verification" content="9tK81P_TYDOlOx_Me0FXzEj_nQnkL9G0kQxRcG4LT7I" />
 <meta name="p:domain_verify" content="d76e189f546bfd185bd2a3ec1a7f214c" />
-<link rel="shortcut icon" href="img/favicon2.png" type="image/x-icon" />
-<link rel="image_src" href="/images/schoology_thumbnail.png" />
-<link rel="stylesheet" type="text/css" href="css/esteu.css" />
-<link rel="stylesheet" type="text/css" src="css/bootstrap.min.css" media="screen" />
+	
+<link rel="shortcut icon" href="../img/favicon2.png" type="image/x-icon" />
+<link rel="stylesheet" type="text/css" href="../css/esteu.css" />
+<link rel="stylesheet" type="text/css" src="../css/bootstrap.min.css" media="screen" />
+
 
 <script>
 	document.createElement('header');
@@ -60,7 +61,7 @@
 <header id="branding" class="clearfix">
   <div class="container clearfix">
     <a id="logo" class="ir" href="http://www.schoology.com/">
-      <img src="img/logi2.png" alt="Schoology Logo">
+      <img src="../img/logi2.png" alt="Schoology Logo">
       <span>Schoology</span>
     </a>
   </div>
@@ -166,8 +167,8 @@
   </div>
 </footer>
 
-<script src="js/bootstrap.min.js" type="text/javascript" charset="utf-8" async defer></script>
-<script src="js/jquery.min.js" type="text/javascript" charset="utf-8" async defer></script>
+<script src="../js/bootstrap.min.js" type="text/javascript" charset="utf-8" async defer></script>
+<script src="../js/jquery.min.js" type="text/javascript" charset="utf-8" async defer></script>
 
 </body>
 </html>
