--- a/paginas/login.html
+++ b/paginas/login.html
@@ -1,11 +1,7 @@
 
 <!DOCTYPE html>
-<!--[if lt IE 7]>  <html xmlns="http://www.w3.org/1999/xhtml" class="ie ie6 lte9 lte8 lte7"> <![endif]-->
-<!--[if IE 7]>     <html xmlns="http://www.w3.org/1999/xhtml" class="ie ie7 lte9 lte8 lte7"> <![endif]-->
-<!--[if IE 8]>     <html xmlns="http://www.w3.org/1999/xhtml" class="ie ie8 lte9 lte8">      <![endif]-->
-<!--[if IE 9]>     <html xmlns="http://www.w3.org/1999/xhtml" class="ie ie9 lte9">           <![endif]-->
-<!--[if gt IE 9]>  <html xmlns="http://www.w3.org/1999/xhtml" lang="en-US">   <![endif]-->
-<!--[if !IE]><!--> <html xmlns="http://www.w3.org/1999/xhtml" lang="en-US">   <!--<![endif]-->
+
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en-US">   
 <head>
 <script type="text/javascript">
   WebFontConfig = {
@@ -28,15 +24,15 @@
     s.parentNode.insertBefore(wf, s);
   })();
 </script>
+
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="google-site-verification" content="6ystVr7sfpd20ctZGukFGunzOJQW7O6kJpXvzAxSEzI" />
 <meta name="google-site-verification" content="9tK81P_TYDOlOx_Me0FXzEj_nQnkL9G0kQxRcG4LT7I" />
 <meta name="p:domain_verify" content="d76e189f546bfd185bd2a3ec1a7f214c" />
-	
+
 <link rel="shortcut icon" href="../img/favicon2.png" type="image/x-icon" />
 <link rel="stylesheet" type="text/css" href="../css/esteu.css" />
 <link rel="stylesheet" type="text/css" src="../css/bootstrap.min.css" media="screen" />
-
 
 <script>
 	document.createElement('header');
@@ -49,10 +45,11 @@
 	document.createElement('figure');
 	document.createElement('figcaption');
 </script>
+
 <!--[endif]-->
-<link rel="stylesheet" type="text/css" href="css/style.css?qrt" />
-<link rel="stylesheet" type="text/css" href="css/login.css?qrt" />
-<link rel="stylesheet" type="text/css" href="css/rebranded.css?qrt" />
+<link rel="stylesheet" type="text/css" href="../css/style.css?qrt" />
+<link rel="stylesheet" type="text/css" href="../css/login.css?qrt" />
+<link rel="stylesheet" type="text/css" href="../css/rebranded.css?qrt" />
 <title>Login to Schoology</title>
 <meta name="description" content="Schoology allows instructors, students and administrators to create a meaningful virtual classroom and extend learning beyond the boundaries of the physical classroom" />
 <!-- a version of inc_header_bottom_sub without marketing material  -->
@@ -60,7 +57,7 @@
 <body class="proxima login-page accessibility-enhanced">
 <header id="branding" class="clearfix">
   <div class="container clearfix">
-    <a id="logo" class="ir" href="http://www.schoology.com/">
+    <a id="logo" class="ir" href="#">
       <img src="../img/logi2.png" alt="Schoology Logo">
       <span>Schoology</span>
     </a>
@@ -167,7 +164,7 @@
   </div>
 </footer>
 
-<script src="../js/bootstrap.min.js" type="text/javascript" charset="utf-8" async defer></script>
+<script src=".//js/bootstrap.min.js" type="text/javascript" charset="utf-8" async defer></script>
 <script src="../js/jquery.min.js" type="text/javascript" charset="utf-8" async defer></script>
 
 </body>
