--- a/paginas/registro_padres.html
+++ b/paginas/registro_padres.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<!-- saved from url=(0051)https://app.schoology.com/register.php?type=student -->
+<!-- saved from url=(0050)https://app.schoology.com/register.php?type=parent -->
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-US" class="js js no-touch hashchange history rgba borderradius boxshadow textshadow opacity cssanimations cssgradients csstransforms csstransforms3d csstransitions fontface generatedcontent boxsizing display-table lastchild placeholder wf-karla-n4-active wf-active wf-inactive" style=""><!--<![endif]-->
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
  <script src="js/14_webfont.js" type="text/javascript" async=""></script>
  
-<link rel="shortcut icon" href="../img/favicon2.png" type="image/x-icon"/>
+<link rel="shortcut icon" href="img_re/favicon.ico" type="image/x-icon">
 <link rel="image_src" href="https://app.schoology.com/images/schoology_thumbnail.png">
 <link rel="stylesheet" type="text/css" href="../css/style.css">
 <link rel="stylesheet" type="text/css" href="../css/thickbox.css" media="screen">
@@ -33,72 +33,72 @@
 <title>Regístrese para obtener una cuenta de Scholoogyy</title>
 <meta name="description" content="">
 
+
 <!-- a version of inc_header_bottom_sub without marketing material  -->
 </head>
-<body class="proxima register-standalone accessibility-enhanced" style="" cz-shortcut-listen="true">
+<body class="proxima register-standalone accessibility-enhanced" cz-shortcut-listen="true" style="">
 
 <header id="branding" class="clearfix">
   <div class="container clearfix">
     <a id="logo" class="ir" href="../index.php">
       <img src="../img/header-logo-transparent.png" alt="Schoology Logo">
-      <span>Schooloogyy</span>
+      <span>Schoology</span>
     </a>
   </div>
 </header>
 
 
-<div id="supplementary" class="content">
-  <article id="main-content" class="registration-page-standalone">
-    <div class="container">
-      <div class="registration-container clearfix">
-        <h3>Regístrate en Schoology</h3>                
-          <a href="../index.php" class="back clickable">Back</a>  
-          <script type="text/javascript">$(document).ready(function(){ Drupal.settings.basePath = "/"; Drupal.setDefaultTimezone(); });
-        </script>
-        <div id="registration-form-wrapper">
-          <form role="form" action="#" accept-charset="UTF-8" method="post" id="s-user-new-registration-form" class="s-user-new-registration-form registrationForm-processed">
-            <div>
-              <div id="role-step" class="form-step">
-                <div class="form-item " id="edit-code-wrapper">
-                   <label for="edit-code">CODIGO DE ACCESO: </label>
-                   <input type="text" maxlength="128" name="code" id="edit-code" size="60" value="" placeholder="Access Code" aria-label="Access Code" class="form-text">
-                   <div id="edit-code-description" class="description">Ingrese el código de acceso proporcionado por su instructor</div>
-                </div>
-                <span class="submit-span-wrapper">
-                  <input type="submit" name="op" id="edit-submit" value="Continue" class="form-submit">
-                </span>
-             </div>
-            <input type="hidden" name="form_build_id" id="f5bbdc-kTucfLSboqXdeSjtnvcnUYbyJM1r5SQW_siuyuiv3ho" value="f5bbdc-kTucfLSboqXdeSjtnvcnUYbyJM1r5SQW_siuyuiv3ho">
-            <input type="hidden" name="form_id" id="edit-s-user-new-registration-form" value="s_user_new_registration_form">
+	<div id="supplementary" class="content">
+	  <article id="main-content" class="registration-page-standalone">
+		    <div class="container">
+		      <div class="registration-container clearfix">
+		        <h3>Sign up for Schoology</h3>                
+		          <a href="../index.php" class="back clickable">Back</a>  
+		          <script type="text/javascript">$(document).ready(function(){ Drupal.settings.basePath = "/"; Drupal.setDefaultTimezone(); });</script>
+		          <div id="registration-form-wrapper">
+		          	<form role="form" action="https://app.schoology.com/registration_front/parent?" accept-charset="UTF-8" method="post" id="s-user-new-registration-form" class="s-user-new-registration-form registrationForm-processed">
+					<div>
+						<div id="role-step" class="form-step">
+							<div class="form-item " id="edit-code-wrapper">
+								 <label for="edit-code">CODIGO DE ACCESO: </label>
+								 <input type="text" maxlength="128" name="code" id="edit-code" size="60" value="" placeholder="Access Code" aria-label="Access Code" class="form-text">
+								 <div id="edit-code-description" class="description">Ingrese el código de acceso proporcionado por su instructor</div>
+							</div>
+							<span class="submit-span-wrapper">
+								<input type="submit" name="op" id="edit-submit" value="Continue" class="form-submit">
+							</span>
+						</div>
+						<input type="hidden" name="form_build_id" id="12b5dd2-dKsFg5ZqEbQILAnIuTo2txLT59t8JscIBYCc3i6-eR0" value="12b5dd2-dKsFg5ZqEbQILAnIuTo2txLT59t8JscIBYCc3i6-eR0">
+							<input type="hidden" name="form_id" id="edit-s-user-new-registration-form" value="s_user_new_registration_form">
+						</div>
+					</form>
+				  </div>
+			  </div>
+		  </div>
+	  </article>
+	</div>
 
-            </div>
-          </form>
-        </div>      
-      </div>
-    </div>
-  </article>
-</div>
-
+		
 
 <footer id="page-footer">
   <div class="container">
     <div id="copyright-and-links">
-      Schoology © 2018        
-      <span class="divider">·</span>
-        <a id="footer-nav-privacy" href="../index.php" target="_blank">Privacy Policy</a>
+      Schoology ©
+      2018        <span class="divider">·</span>
+        <a id="footer-nav-privacy" href="https://www.schoology.com/privacy" target="_blank">Privacy Policy</a>
         <span class="divider">·</span>
-        <a id="footer-nav-privacy" href="../index.php" target="_blank">Terms of Use</a>
+        <a id="footer-nav-privacy" href="https://www.schoology.com/terms-of-use" target="_blank">Terms of Use</a>
       <span class="divider">·</span>
-      <a id="footer-nav-help-center" href="../index.php" rel="external" target="_blank">Help Center</a>
+      <a id="footer-nav-help-center" href="https://support.schoology.com/hc/en-us" rel="external" target="_blank">Help Center</a>
     </div>
     <div id="trust" style="display:none">
-      <a href="../index.php" target="_blank" id="privacy-link">
-        <img alt="Privo Privacy Certified" src="../index.php">
+      <a href="https://www.schoology.com/privacy" target="_blank" id="privacy-link">
+        <img alt="Privo Privacy Certified" src="./Sign up for a Schoology Account_files/H_PPC_B.png">
       </a>
       <script type="text/javascript">
         (function () {
           var lang = document.documentElement.lang;
-          var link = '#';
+          var link = 'https://www.schoology.com/privacy';
           if (lang === 'es') {
             link += '/es';
           }
