--- a/paginas/login.html
+++ b/paginas/login.html
@@ -25,26 +25,13 @@
   })();
 </script>
 
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="google-site-verification" content="6ystVr7sfpd20ctZGukFGunzOJQW7O6kJpXvzAxSEzI" />
-<meta name="google-site-verification" content="9tK81P_TYDOlOx_Me0FXzEj_nQnkL9G0kQxRcG4LT7I" />
-<meta name="p:domain_verify" content="d76e189f546bfd185bd2a3ec1a7f214c" />
+
 
 <link rel="shortcut icon" href="../img/favicon2.png" type="image/x-icon" />
 <link rel="stylesheet" type="text/css" href="../css/esteu.css" />
 <link rel="stylesheet" type="text/css" src="../css/bootstrap.min.css" media="screen" />
 
-<script>
-	document.createElement('header');
-	document.createElement('nav');
-	document.createElement('section');
-	document.createElement('article');
-	document.createElement('aside');
-	document.createElement('footer');
-	document.createElement('hgroup');
-	document.createElement('figure');
-	document.createElement('figcaption');
-</script>
+
 
 <!--[endif]-->
 <link rel="stylesheet" type="text/css" href="../css/style.css?qrt" />
@@ -57,8 +44,8 @@
 <body class="proxima login-page accessibility-enhanced">
 <header id="branding" class="clearfix">
   <div class="container clearfix">
-    <a id="logo" class="ir" href="#">
-      <img src="../img/logi2.png" alt="Schoology Logo">
+    <a id="logo" class="ir" href="../index.php">
+      <img src="../img/header-logo-transparent.png" alt="Schoology Logo">
       <span>Schoology</span>
     </a>
   </div>
