--- a/paginas/registro_padre.html
+++ b/paginas/registro_padre.html
@@ -1,15 +1,40 @@
 <!DOCTYPE html>
-<!-- saved from url=(0051)https://app.schoology.com/register.php?type=student -->
+<!-- saved from url=(0050)https://app.schoology.com/register.php?type=parent -->
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-US" class="js js no-touch hashchange history rgba borderradius boxshadow textshadow opacity cssanimations cssgradients csstransforms csstransforms3d csstransitions fontface generatedcontent boxsizing display-table lastchild placeholder wf-karla-n4-active wf-active wf-inactive" style=""><!--<![endif]-->
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
- <script src="js/14_webfont.js" type="text/javascript" async=""></script>
- 
-<link rel="shortcut icon" href="../img/favicon2.png" type="image/x-icon"/>
+  <script src="./Sign up for a Schoology Account_files/webfont.js.descarga" type="text/javascript" async=""></script>
+  <script type="text/javascript">
+
+  <link rel="shortcut icon" href="../img/favicon2.png" type="image/x-icon" />
+
+
+
+  WebFontConfig = {
+    google: { families: [ 'Karla:400:latin' ] }
+  };
+  (function() {
+    var h = document.getElementsByTagName('html')[0];
+    h.className += ' wf-karla-n4-loading';
+    var t = setTimeout(function() {
+      h.className = h.className.replace(/(\s|^)wf-loading(\s|$)/g, ' ');
+      h.className = h.className.replace(/(\s|^)wf-karla-n4-loading(\s|$)/g, ' ');
+      h.className += ' wf-inactive';
+    }, 2000);
+    var wf = document.createElement('script');
+    wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
+      '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+    wf.type = 'text/javascript';
+    wf.async = 'true';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(wf, s);
+  })();
+</script>
+
 <link rel="image_src" href="https://app.schoology.com/images/schoology_thumbnail.png">
 <link rel="stylesheet" type="text/css" href="../css/style.css">
 <link rel="stylesheet" type="text/css" href="../css/thickbox.css" media="screen">
-<link rel="stylesheet" href="../css/css" media="all">
+<link rel="stylesheet" href="./css/css" media="all">
 
 <script type="text/javascript" src="jslp/1_jquery-1.10.2.min.js"></script>
 <script type="text/javascript" src="jslp/2_drupal.js"></script>
@@ -20,6 +45,7 @@
 <script type="text/javascript" src="jslp/7_jquery.autocomplete.js"></script>
 <script type="text/javascript" src="jslp/8_s_user_usernames_login.js"></script>
 
+
 <script type="text/javascript" src="js/9_drupal(1).js"></script>
 <script type="text/javascript" src="js/10_jquery.form.318.js"></script>
 <script type="text/javascript" src="js/11_register.js"></script>
@@ -28,20 +54,17 @@
 <link rel="stylesheet" type="text/css" href="js/14_webfont.js">
 <link rel="stylesheet" type="text/css" href="../css/registro.css">
 <link rel="stylesheet" type="text/css" href="../css/rebranded.css">
-
-
-<title>Regístrese para obtener una cuenta de Scholoogyy</title>
+<title>Sign up for a Schoology Account</title>
 <meta name="description" content="">
 
 <!-- a version of inc_header_bottom_sub without marketing material  -->
 </head>
-<body class="proxima register-standalone accessibility-enhanced" style="" cz-shortcut-listen="true">
-
+<body class="proxima register-standalone accessibility-enhanced" cz-shortcut-listen="true" style="">
 <header id="branding" class="clearfix">
   <div class="container clearfix">
-    <a id="logo" class="ir" href="../index.php">
+    <a id="logo" class="ir" href="../index.php/">
       <img src="../img/header-logo-transparent.png" alt="Schoology Logo">
-      <span>Schooloogyy</span>
+      <span>Scholoogyy</span>
     </a>
   </div>
 </header>
@@ -79,26 +102,26 @@
   </article>
 </div>
 
-
+<!-- a version of inc_footer without marketing material  -->
 <footer id="page-footer">
   <div class="container">
     <div id="copyright-and-links">
-      Schoology © 2018        
-      <span class="divider">·</span>
-        <a id="footer-nav-privacy" href="../index.php" target="_blank">Privacy Policy</a>
+      Schoology ©
+      2018        <span class="divider">·</span>
+        <a id="footer-nav-privacy" href="https://www.schoology.com/privacy" target="_blank">Privacy Policy</a>
         <span class="divider">·</span>
-        <a id="footer-nav-privacy" href="../index.php" target="_blank">Terms of Use</a>
+        <a id="footer-nav-privacy" href="https://www.schoology.com/terms-of-use" target="_blank">Terms of Use</a>
       <span class="divider">·</span>
-      <a id="footer-nav-help-center" href="../index.php" rel="external" target="_blank">Help Center</a>
+      <a id="footer-nav-help-center" href="https://support.schoology.com/hc/en-us" rel="external" target="_blank">Help Center</a>
     </div>
     <div id="trust" style="display:none">
-      <a href="../index.php" target="_blank" id="privacy-link">
-        <img alt="Privo Privacy Certified" src="../index.php">
+      <a href="https://www.schoology.com/privacy" target="_blank" id="privacy-link">
+        <img alt="Privo Privacy Certified" src="./Sign up for a Schoology Account_files/H_PPC_B.png">
       </a>
       <script type="text/javascript">
         (function () {
           var lang = document.documentElement.lang;
-          var link = '#';
+          var link = 'https://www.schoology.com/privacy';
           if (lang === 'es') {
             link += '/es';
           }
@@ -113,4 +136,5 @@
 
 
 
-</body></html>
+</body>
+</html>
